--- a/ATISMobile/ATISMobile/LoadCapacitorLoadsListTypeSelectionPage.xaml
+++ b/ATISMobile/ATISMobile/LoadCapacitorLoadsListTypeSelectionPage.xaml
@@ -21,7 +21,7 @@
             <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
             <ScrollView BackgroundColor="Transparent">
                 <StackLayout Padding="40,10,40,10" BackgroundColor="Transparent"  >
-                    <Button x:Name="BtnNotSedimented" BorderWidth="2" BorderColor="Black"  CornerRadius="15" FontSize="Medium"   Text="بار موجود" BackgroundColor="OrangeRed" TextColor="White"  Clicked="BtnNotSedimented_ClickedEvent">
+                    <Button x:Name="BtnNotSedimented" BorderWidth="2" BorderColor="Black"  CornerRadius="15" FontSize="Large"   Text="بار موجود" BackgroundColor="DeepSkyBlue" TextColor="Black" HeightRequest="80"  Clicked="BtnNotSedimented_ClickedEvent">
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -30,7 +30,10 @@
                             </OnPlatform>
                         </Button.FontFamily>
                     </Button>
-                    <Button x:Name="BtnSedimented"  BorderWidth="2"  BorderColor="Black"    CornerRadius="15"  FontSize="Small"  Text="بار رسوب شده(بارجذب نشده توسط رانندگان)" BackgroundColor="Orange"   TextColor="Black" Clicked="BtnSedimented_ClickedEvent">
+                    <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
+                    <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
+                    <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
+                    <Button x:Name="BtnSedimented"  BorderWidth="2"  BorderColor="Black"    CornerRadius="15"  FontSize="Medium"  Text="بار رسوب شده(بارجذب نشده توسط رانندگان)" BackgroundColor="GreenYellow" HeightRequest="80"  TextColor="Black" Clicked="BtnSedimented_ClickedEvent">
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
