--- a/ATISMobile/ATISMobile/MoneyWalletChargingPage.xaml
+++ b/ATISMobile/ATISMobile/MoneyWalletChargingPage.xaml
@@ -18,6 +18,7 @@
 
     <ContentPage.Content>
         <StackLayout BackgroundColor="White">
+            <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
             <Label BackgroundColor="White"  TextColor="Black"  HorizontalTextAlignment="Center" FontSize="Small"  FontAttributes="None" Text = "شارژ کیف پول از طریق درگاه پرداخت" >
                 <Label.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
@@ -94,7 +95,7 @@
                     </OnPlatform>
                 </Label.FontFamily>
             </Label>
-            <Button x:Name="_BtnGotoCharge" Margin="80,10,80,10"  BackgroundColor="Yellow" TextColor="Black" CornerRadius="10"  FontSize="Medium" FontAttributes="Bold" Text = "شارژ موجودی"  Clicked="_BtnGotoCharge_ClickedEvent">
+            <Button x:Name="_BtnGotoCharge" Margin="80,10,80,10" BorderColor="Black"  BackgroundColor="Yellow" TextColor="Black" CornerRadius="10"  FontSize="Medium" FontAttributes="Bold" Text = "شارژ موجودی"  Clicked="_BtnGotoCharge_ClickedEvent">
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
@@ -103,6 +104,7 @@
                     </OnPlatform>
                 </Button.FontFamily>
             </Button>
+            <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
