--- a/ATISMobile/ATISMobile/StartPage.xaml
+++ b/ATISMobile/ATISMobile/StartPage.xaml
@@ -4,7 +4,7 @@
              x:Class="ATISMobile.StartPage"
              FlowDirection="RightToLeft"
              BackgroundColor="White"
-             BackgroundImage="@drawable/BG993"
+             BackgroundImage="@drawable/BG4"
              Padding="30">
     <NavigationPage.TitleView>
         <StackLayout>
@@ -21,18 +21,7 @@
     </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout Padding="20,10,20,10" BackgroundColor="Transparent" >
-            <Label Text="" TextColor="Yellow"   HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"   FontSize="Large" />
-            <Label Text="" TextColor="Yellow"   HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"   FontSize="Large" />
-            <Button x:Name="_StartApplication" BorderWidth="4" BorderColor="GreenYellow"    CornerRadius="15" FontSize="Large"   Text="ورود" BackgroundColor="YellowGreen"     TextColor="Black" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"  WidthRequest="200" HeightRequest="80" BorderRadius="15" Clicked="_StartApplication_ClickedEvent" >
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String">
-                        <On Platform="iOS" Value="Samim" />
-                        <On Platform="Android" Value="Samim-Bold.otf#Samim" />
-                        <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
-                    </OnPlatform>
-                </Button.FontFamily>
-            </Button>
-            <Button x:Name="_ExitApplication" BorderWidth="3" BorderColor="DarkRed"   CornerRadius="15" FontSize="Large"   Text="خروج" BackgroundColor="Transparent"     TextColor="Black"   HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand" WidthRequest="200" HeightRequest="80" BorderRadius="15" Clicked="_ExitApplication_ClickedEvent" >
+            <Button x:Name="_StartApplication" BorderWidth="4" BorderColor="Transparent"       FontSize="Large"   Text="ورود" BackgroundColor="Transparent"    TextColor="White"      HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"     WidthRequest="200" HeightRequest="200" BorderRadius="100" Clicked="_StartApplication_ClickedEvent" >
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
