--- a/ATISMobile/ATISMobile/StartPage.xaml
+++ b/ATISMobile/ATISMobile/StartPage.xaml
@@ -21,7 +21,7 @@
     </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout Padding="20,10,20,10" BackgroundColor="Transparent" >
-            <Button x:Name="_StartApplication" BorderWidth="4" BorderColor="Transparent"       FontSize="Large"   Text="ورود" BackgroundColor="Transparent"    TextColor="White"      HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"     WidthRequest="200" HeightRequest="200" BorderRadius="100" Clicked="_StartApplication_ClickedEvent" >
+            <Button x:Name="_StartApplication"  IsEnabled="False"      FontSize="Large"   Text="ورود" BackgroundColor="Transparent"  TextColor="Transparent"     HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"     WidthRequest="200" HeightRequest="200" BorderRadius="100" Clicked="_StartApplication_ClickedEvent" >
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
@@ -30,7 +30,7 @@
                     </OnPlatform>
                 </Button.FontFamily>
             </Button>
-            <Button x:Name="_ApplicationVersion" BorderWidth="1" BorderColor="RED"   CornerRadius="15" FontSize="Medium"  Text="" BackgroundColor="Black"     TextColor="White"    HorizontalOptions="CenterAndExpand"   VerticalOptions="End"   >
+            <Button x:Name="_MessageBox" BorderWidth="1" BorderColor="RED"   CornerRadius="15" FontSize="Medium"  Text="ارتباط با سرور آتیس برقرار نیست" BackgroundColor="Red"      TextColor="White"    HorizontalOptions="CenterAndExpand"   VerticalOptions="End"   >
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
