--- a/ATISMobile/ATISMobile/TruckDriverPage.xaml
+++ b/ATISMobile/ATISMobile/TruckDriverPage.xaml
@@ -85,6 +85,15 @@
                     </OnPlatform>
                 </Label.FontFamily>
             </Label>
+            <Label x:Name="LblErrorMessage" BackgroundColor="White"  TextColor="Black"   FontSize="Large"   FontAttributes="Bold" Text = "" VerticalOptions="Center"  HorizontalOptions="CenterAndExpand" >
+                <Label.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <On Platform="iOS" Value="Samim" />
+                        <On Platform="Android" Value="Samim-Bold.otf#Samim" />
+                        <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
+                    </OnPlatform>
+                </Label.FontFamily>
+            </Label>
             <Label BackgroundColor="White"  TextColor="Blue"   FontSize="Medium"  FontAttributes="Bold" Text = "" VerticalOptions="CenterAndExpand"    HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
